# pyinterval

./: .gitignore  README.md  __init__.py  expression.py  main.py  pyproject.toml  requirements.dev.txt
src/: _units.py  expression.py
src/pyinterval/: _units.py  expression.py
src/pyinterval.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_expression.py
